--- a/index.html
+++ b/index.html
@@ -89,9 +89,16 @@
       <tr>
         <td>Science</td>
         <td>Midterm Test</td>
-        <td>—</td>
-        <td>—</td>
+        <td>95.6</td>
+        <td>2025</td>
       </tr>
+      <tr>
+        <td>English</td>
+        <td>Quiz 2</td>
+        <td>90</td>
+        <td>June 2025</td>
+      </tr>
+
     </table>
     <p class="note">*Grades will be updated after each assessment.</p>
   </section>
