--- a/index.html
+++ b/index.html
@@ -82,21 +82,57 @@
       </tr>
       <tr>
         <td>Math</td>
-        <td>Final Exam</td>
-        <td>92.6</td>
+        <td>EndTerm</td>
+        <td>95</td>
         <td>2025</td>
       </tr>
       <tr>
-        <td>Science</td>
-        <td>Midterm Test</td>
-        <td>95.6</td>
+        <td>Physics</td>
+        <td>EndTerm</td>
+        <td>100</td>
         <td>2025</td>
       </tr>
       <tr>
         <td>English</td>
-        <td>Quiz 2</td>
-        <td>90</td>
-        <td>June 2025</td>
+        <td>EndTerm</td>
+        <td>92</td>
+        <td>2025</td>
+      </tr>
+      <tr>
+        <td>Geography</td>
+        <td>EndTerm</td>
+        <td>95</td>
+        <td>2025</td>
+      </tr>
+      <tr>
+        <td>Life Science</td>
+        <td>EndTerm</td>
+        <td>100</td>
+        <td>2025</td>
+      </tr>
+      <tr>
+        <td>EWH</td>
+        <td>EndTerm</td>
+        <td>100</td>
+        <td>2025</td>
+      </tr>
+      <tr>
+        <td>Civics</td>
+        <td>EndTerm</td>
+        <td>100</td>
+        <td>2025</td>
+      </tr>
+      <tr>
+        <td>Indonesian</td>
+        <td>EndTerm</td>
+        <td>98</td>
+        <td>2025</td>
+      </tr>
+      <tr>
+        <td>Average Score</td>
+        <td>EndTerm</td>
+        <td>97.5</td>
+        <td>2025</td>
       </tr>
 
     </table>
