--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@
         <td>98</td>
         <td>2025</td>
       </tr>
-      <tr> </b>
-        <td>Average Score</td>
-        <td>EndTerm</td>
-        <td>97.5</td>
-        <td>2025</td>
-      </tr> </b>
+      <tr>
+        <th>Average Score</th>
+        <th>EndTerm</th>
+        <th>97.5</th>
+        <th>2025</th>
+      </tr>
 
     </table>
     <p class="note">*Grades will be updated after each assessment.</p>
