--- a/index.html
+++ b/index.html
@@ -129,12 +129,11 @@
         <td>2025</td>
       </tr>
       <tr>
-        <th>Average Score</th>
-        <th>EndTerm</th>
-        <th>97.5</th>
-        <th>2025</th>
-      </tr>
-
+        <td><strong>Math</strong></td>
+        <td><strong>Midterm</strong></td>
+        <td><strong>92.6</strong></td>
+        <td><strong>May 2025</strong></td>
+        </tr>
     </table>
     <p class="note">*Grades will be updated after each assessment.</p>
   </section>
