--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </p>
   </section>
 
-  <section>
+<section>
     <h2>🧮 Latest Grades</h2>
     <table>
       <tr>
@@ -129,10 +129,10 @@
         <td>2025</td>
       </tr>
       <tr>
-        <td><strong>Math</strong></td>
-        <td><strong>Midterm</strong></td>
-        <td><strong>92.6</strong></td>
-        <td><strong>May 2025</strong></td>
+        <td><strong>Average Score</strong></td>
+        <td><strong>EndTerm</strong></td>
+        <td><strong>97.5</strong></td>
+        <td><strong>2025</strong></td>
         </tr>
     </table>
     <p class="note">*Grades will be updated after each assessment.</p>
