--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     body {
       font-family: Arial, Helvetica, sans-serif;
       margin: 0;
-      background-color: #f4f6f8;
+      background-color: #ECC8AF;
       color: #333;
     }
     header {
-      background-color: #2c3e50;
+      background-color: #670E10;
       color: white;
       padding: 30px 20px;
       text-align: center;
@@ -129,7 +129,7 @@
         <td>2025</td>
       </tr>
       <tr>
-        <td><strong>Average Score</strong></td>
+        <td><strong>Average</strong></td>
         <td><strong>EndTerm</strong></td>
         <td><strong>97.5</strong></td>
         <td><strong>2025</strong></td>
@@ -143,7 +143,8 @@
     <ul>
       <li>Math average improved compared to last year</li>
       <li>Better consistency in homework and tests</li>
-      <li>Improved problem-solving and accuracy</li>
+      <li>Improved in average scores than the past year</li>
+      <li>I got four 100s</li>
     </ul>
   </section>
 
