--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
   <section>
     <h2>📘 About This Website</h2>
     <p>
-      Hi Mom! 💙 This website is created to share my academic progress with you.
+      Hi Mom and Dad! 💙 This website is created to share my academic progress with you.
       I will regularly update my grades here so you can always see how I am doing
-      in school.
+      in school!
     </p>
   </section>
 
@@ -149,7 +149,7 @@
   </section>
 
   <footer>
-    © 2025 Tara | Updated regularly for Mom ❤️
+    © 2025 Tara | Updated regularly for Mom and Dad ❤️
   </footer>
 
 </body>
