--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tara's Academic Progress</title>
+  <title>Tara's Academic Progress ᯓ★</title>
   <style>
     body {
       font-family: Arial, Helvetica, sans-serif;
@@ -143,8 +143,7 @@
     <ul>
       <li>Math average improved compared to last year</li>
       <li>Better consistency in homework and tests</li>
-      <li>Improved in average scores than the past year</li>
-      <li>I got four 100s</li>
+      <li>Improved in average</li>
     </ul>
   </section>
 
